# projects

./: README.md
App/: README.md
App/Backend-Django/: README.md  pyproject.toml
App/Backend-Django/services/: db.sqlite3
App/Backend-Django/services/Postit/: Postit-Test  apps.py  models.py  views.py
App/Backend-Django/services/Postit/management/commands/: clear_database_.py
App/Backend-Django/services/Postit/migrations/: 0001_initial.py
App/Backend-Django/services/User/: models.py  views.py
App/Backend-Django/services/User/management/commands/: clear_database_user.py
App/Backend-Django/services/User/migrations/: 0001_initial.py
App/Backend-Django/services/services/: settings.py  urls.py
App/Backend-FastApi/: README.md  database.db  main-test.py  main.py
App/Backend-Flask/: README.md  database.db  main.py
App/Frontend-ReactJS/: README.md  index.js  package-lock.json  package.json
Archive/Java/: Main.java  memo-java
Archive/OneBookOnTheRoad/: Pipfile  README.md  UserAccountService.py  app.py  database-user.py  database.db
Archive/Tutorials/: memo-deploy.txt  memo-django-app  memo-front-end  memo-pyenv  memo-python3-venv
Archive/books/: CEH-CertifiedEthicalHacker.tex  LPIC-1-LinuxProfessionalInstitueCertification.tex
Archive/scripts/: env_script.sh  myprog.s  script-01-03.sh  script.pl  test.tex
LDAP/: README.md  config.json  demo.json  dropTable.py  main.py
LDAP/module/: HTMLTable.py  LDAP.py  algorithm.py  clustering.py  data.py  database.py  decorators.py  preparation.py
Programming-C/Shell-C/: README.md
Python-Projects/: README.md
(+670 files in other folders)
